headers: Use the aarch64 asm variant for __prefetch on ARM64EC
Signed-off-by: Jacek Caban <jacek@codeweavers.com>

--- a/mingw-w64-headers/crt/_mingw.h.in
+++ b/mingw-w64-headers/crt/_mingw.h.in
@@ -640,13 +640,13 @@ __MINGW_INTRIN_INLINE void __cdecl __MINGW_ATTRIB_NORETURN __fastfail(unsigned i
 #define __MINGW_PREFETCH_IMPL 1
 #endif
 #if __MINGW_PREFETCH_IMPL == 1
-#if defined(__arm__) || defined(__aarch64__)
+#if defined(__arm__) || defined(__aarch64__) || defined(__arm64ec__)
 void __cdecl __prefetch(const void *addr);
 __MINGW_INTRIN_INLINE void __cdecl __prefetch(const void *addr)
 {
 #if defined(__arm__)
   __asm__ __volatile__("pld [%0]"::"r"(addr));
-#elif defined(__aarch64__)
+#elif defined(__aarch64__) || defined(__arm64ec__)
   __asm__ __volatile__("prfm pldl1keep, [%0]"::"r"(addr));
 #endif
 }
