crt: Define metadata structures used for ARM64EC
These are populated by the linker, and then used by the loader and
emulator at runtime to allow for ARM64EC <-> X86_64 interoperability.

Signed-off-by: Jacek Caban <jacek@codeweavers.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -1100,6 +1100,9 @@ src_libmingwexarm64=\
   math/arm64/rint.c         math/arm64/rintf.c \
   math/arm-common/ldexpl.c
 
+if ARM64EC
+src_libmingwexarm64+=crt/chpe.S
+endif
 
 # These intrinsics are target independent:
 src_intrincs= \
