crt: add xaudio2_9.def
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/libarm32/Makefile.am
+++ b/mingw-w64-crt/libarm32/Makefile.am
@@ -1017,6 +1017,7 @@ libarm32_DATA += %reldir%/libwwanprotdim.a
 libarm32_DATA += %reldir%/libwwansvc.a
 libarm32_DATA += %reldir%/libwwapi.a
 libarm32_DATA += %reldir%/libxaudio2_8.a
+libarm32_DATA += %reldir%/libxaudio2_9.a
 libarm32_DATA += %reldir%/libxinput1_4.a
 libarm32_DATA += %reldir%/libxmllite.a
 libarm32_DATA += %reldir%/libxpsprint.a
