--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -822,6 +822,7 @@ lib64_DATA += %reldir%/libxinput1_3.a
 lib64_DATA += %reldir%/libxinput1_4.a
 lib64_DATA += %reldir%/libxinput9_1_0.a
 lib64_DATA += %reldir%/libxaudio2_8.a
+lib64_DATA += %reldir%/libxaudio2_9.a
 lib64_DATA += %reldir%/libd3dcompiler_46.a
 lib64_DATA += %reldir%/libd3dcsx_46.a
 lib64_DATA += %reldir%/libd3dcompiler_47.a
