--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -356,5 +356,6 @@ libarm64_DATA += %reldir%/libwslapi.a
 libarm64_DATA += %reldir%/libwsock32.a
 libarm64_DATA += %reldir%/libwtsapi32.a
 libarm64_DATA += %reldir%/libxaudio2_8.a
+libarm64_DATA += %reldir%/libxaudio2_9.a
 libarm64_DATA += %reldir%/libxinput1_4.a
 libarm64_DATA += %reldir%/libxmllite.a
