headers: Add portabledeviceapi.idl
Required for chromium/components/storage_monitor/portable_device_watcher_win.h

Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -200,6 +200,7 @@ IDL_SRCS = \
   include/objidlbase.idl \
   include/oleidl.idl \
   include/optary.idl \
+  include/portabledeviceapi.idl \
   include/portabledevicetypes.idl \
   include/propidl.idl \
   include/propsys.idl \
