--- a/mingw-w64-headers/Makefile.in
+++ b/mingw-w64-headers/Makefile.in
@@ -502,6 +502,7 @@ EXTRA_HEADERS = \
 @HAVE_WIDL_TRUE@  include/objidlbase.idl \
 @HAVE_WIDL_TRUE@  include/oleidl.idl \
 @HAVE_WIDL_TRUE@  include/optary.idl \
+@HAVE_WIDL_TRUE@  include/portabledeviceapi.idl \
 @HAVE_WIDL_TRUE@  include/portabledevicetypes.idl \
 @HAVE_WIDL_TRUE@  include/propidl.idl \
 @HAVE_WIDL_TRUE@  include/propsys.idl \
