headers: Add inputpaneinterop.idl
Required for chromium/ui/base/ime/win/on_screen_keyboard_display_manager_input_pane.h

Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -156,6 +156,7 @@ IDL_SRCS = \
   include/icftypes.idl \
   include/icodecapi.idl \
   include/iketypes.idl \
+  include/inputpaneinterop.idl \
   include/inputscope.idl \
   include/inspectable.idl \
   include/ivectorchangedeventargs.idl \
