--- a/mingw-w64-headers/Makefile.in
+++ b/mingw-w64-headers/Makefile.in
@@ -458,6 +458,7 @@ EXTRA_HEADERS = \
 @HAVE_WIDL_TRUE@  include/icftypes.idl \
 @HAVE_WIDL_TRUE@  include/icodecapi.idl \
 @HAVE_WIDL_TRUE@  include/iketypes.idl \
+@HAVE_WIDL_TRUE@  include/inputpaneinterop.idl \
 @HAVE_WIDL_TRUE@  include/inputscope.idl \
 @HAVE_WIDL_TRUE@  include/inspectable.idl \
 @HAVE_WIDL_TRUE@  include/ivectorchangedeventargs.idl \
