--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2239,6 +2239,9 @@ endif
 %/libwindowsapp.a: lib-common/windowsapp.mri \
 		%/libapi-ms-win-appmodel-runtime-l1-1-0.a \
 		%/libapi-ms-win-appmodel-runtime-l1-1-1.a \
+		%/libapi-ms-win-appmodel-runtime-l1-1-2.a \
+		%/libapi-ms-win-appmodel-runtime-l1-1-3.a \
+		%/libapi-ms-win-core-atoms-l1-1-0.a \
 		%/libapi-ms-win-core-com-l1-1-0.a \
 		%/libapi-ms-win-core-com-l1-1-1.a \
 		%/libapi-ms-win-core-com-l2-1-1.a \
@@ -2256,14 +2259,18 @@ endif
 		%/libapi-ms-win-core-datetime-l1-1-2.a \
 		%/libapi-ms-win-core-debug-l1-1-0.a \
 		%/libapi-ms-win-core-debug-l1-1-1.a \
+		%/libapi-ms-win-core-delayload-l1-1-0.a \
 		%/libapi-ms-win-core-delayload-l1-1-1.a \
 		%/libapi-ms-win-core-enclave-l1-1-0.a \
 		%/libapi-ms-win-core-errorhandling-l1-1-0.a \
 		%/libapi-ms-win-core-errorhandling-l1-1-1.a \
+		%/libapi-ms-win-core-errorhandling-l1-1-2.a \
 		%/libapi-ms-win-core-errorhandling-l1-1-3.a \
 		%/libapi-ms-win-core-featurestaging-l1-1-0.a \
 		%/libapi-ms-win-core-featurestaging-l1-1-1.a \
+		%/libapi-ms-win-core-fibers-l1-1-0.a \
 		%/libapi-ms-win-core-fibers-l1-1-1.a \
+		%/libapi-ms-win-core-fibers-l2-1-0.a \
 		%/libapi-ms-win-core-fibers-l2-1-1.a \
 		%/libapi-ms-win-core-file-ansi-l1-1-0.a \
 		%/libapi-ms-win-core-file-ansi-l2-1-0.a \
@@ -2285,12 +2292,16 @@ endif
 		%/libapi-ms-win-core-interlocked-l1-2-0.a \
 		%/libapi-ms-win-core-io-l1-1-0.a \
 		%/libapi-ms-win-core-io-l1-1-1.a \
+		%/libapi-ms-win-core-job-l2-1-0.a \
 		%/libapi-ms-win-core-kernel32-legacy-ansi-l1-1-0.a \
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-0.a \
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-1.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-2.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-5.a \
 		%/libapi-ms-win-core-largeinteger-l1-1-0.a \
 		%/libapi-ms-win-core-libraryloader-l1-2-0.a \
 		%/libapi-ms-win-core-libraryloader-l1-2-1.a \
+		%/libapi-ms-win-core-libraryloader-l1-2-2.a \
 		%/libapi-ms-win-core-libraryloader-l2-1-0.a \
 		%/libapi-ms-win-core-localization-ansi-l1-1-0.a \
 		%/libapi-ms-win-core-localization-l1-2-0.a \
@@ -2314,12 +2325,17 @@ endif
 		%/libapi-ms-win-core-namespace-l1-1-0.a \
 		%/libapi-ms-win-core-normalization-l1-1-0.a \
 		%/libapi-ms-win-core-path-l1-1-0.a \
+		%/libapi-ms-win-core-privateprofile-l1-1-0.a \
+		%/libapi-ms-win-core-privateprofile-l1-1-1.a \
+		%/libapi-ms-win-core-processenvironment-ansi-l1-1-0.a \
 		%/libapi-ms-win-core-processenvironment-l1-1-0.a \
 		%/libapi-ms-win-core-processenvironment-l1-2-0.a \
+		%/libapi-ms-win-core-processsnapshot-l1-1-0.a \
 		%/libapi-ms-win-core-processthreads-l1-1-0.a \
 		%/libapi-ms-win-core-processthreads-l1-1-1.a \
 		%/libapi-ms-win-core-processthreads-l1-1-2.a \
 		%/libapi-ms-win-core-processthreads-l1-1-3.a \
+		%/libapi-ms-win-core-processtopology-l1-1-0.a \
 		%/libapi-ms-win-core-processtopology-obsolete-l1-1-0.a \
 		%/libapi-ms-win-core-profile-l1-1-0.a \
 		%/libapi-ms-win-core-psapi-ansi-l1-1-0.a \
@@ -2329,10 +2345,18 @@ endif
 		%/libapi-ms-win-core-realtime-l1-1-1.a \
 		%/libapi-ms-win-core-realtime-l1-1-2.a \
 		%/libapi-ms-win-core-registry-l1-1-0.a \
+		%/libapi-ms-win-core-registry-l1-1-1.a \
+		%/libapi-ms-win-core-registry-l1-1-2.a \
 		%/libapi-ms-win-core-registry-l2-1-0.a \
+		%/libapi-ms-win-core-rtlsupport-l1-1-0.a \
 		%/libapi-ms-win-core-rtlsupport-l1-2-0.a \
+		%/libapi-ms-win-core-shutdown-l1-1-0.a \
 		%/libapi-ms-win-core-slapi-l1-1-0.a \
 		%/libapi-ms-win-core-string-l1-1-0.a \
+		%/libapi-ms-win-core-string-l2-1-0.a \
+		%/libapi-ms-win-core-string-obsolete-l1-1-0.a \
+		%/libapi-ms-win-core-string-obsolete-l1-1-1.a \
+		%/libapi-ms-win-core-stringansi-l1-1-0.a \
 		%/libapi-ms-win-core-synch-ansi-l1-1-0.a \
 		%/libapi-ms-win-core-synch-l1-1-0.a \
 		%/libapi-ms-win-core-synch-l1-2-0.a \
@@ -2341,17 +2365,25 @@ endif
 		%/libapi-ms-win-core-sysinfo-l1-2-0.a \
 		%/libapi-ms-win-core-sysinfo-l1-2-1.a \
 		%/libapi-ms-win-core-sysinfo-l1-2-3.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-5.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-6.a \
+		%/libapi-ms-win-core-systemtopology-l1-1-0.a \
 		%/libapi-ms-win-core-threadpool-l1-2-0.a \
+		%/libapi-ms-win-core-threadpool-legacy-l1-1-0.a \
 		%/libapi-ms-win-core-timezone-l1-1-0.a \
 		%/libapi-ms-win-core-timezone-l1-1-1.a \
+		%/libapi-ms-win-core-toolhelp-l1-1-0.a \
 		%/libapi-ms-win-core-url-l1-1-0.a \
 		%/libapi-ms-win-core-util-l1-1-0.a \
 		%/libapi-ms-win-core-versionansi-l1-1-0.a \
+		%/libapi-ms-win-core-versionansi-l1-1-1.a \
 		%/libapi-ms-win-core-version-l1-1-0.a \
+		%/libapi-ms-win-core-version-l1-1-1.a \
 		%/libapi-ms-win-core-windowsceip-l1-1-0.a \
 		%/libapi-ms-win-core-windowserrorreporting-l1-1-0.a \
 		%/libapi-ms-win-core-windowserrorreporting-l1-1-1.a \
 		%/libapi-ms-win-core-windowserrorreporting-l1-1-2.a \
+		%/libapi-ms-win-core-winrt-error-l1-1-0.a \
 		%/libapi-ms-win-core-winrt-error-l1-1-1.a \
 		%/libapi-ms-win-core-winrt-l1-1-0.a \
 		%/libapi-ms-win-core-winrt-registration-l1-1-0.a \
@@ -2363,31 +2395,47 @@ endif
 		%/libapi-ms-win-core-xstate-l2-1-0.a \
 		%/libapi-ms-win-devices-config-l1-1-1.a \
 		%/libapi-ms-win-devices-config-l1-1-2.a \
+		%/libapi-ms-win-devices-query-l1-1-0.a \
 		%/libapi-ms-win-eventing-classicprovider-l1-1-0.a \
 		%/libapi-ms-win-eventing-consumer-l1-1-0.a \
 		%/libapi-ms-win-eventing-controller-l1-1-0.a \
 		%/libapi-ms-win-eventing-legacy-l1-1-0.a \
+		%/libapi-ms-win-eventing-obsolete-l1-1-0.a \
 		%/libapi-ms-win-eventing-provider-l1-1-0.a \
+		%/libapi-ms-win-eventlog-legacy-l1-1-0.a \
 		%/libapi-ms-win-gaming-deviceinformation-l1-1-0.a \
 		%/libapi-ms-win-gaming-expandedresources-l1-1-0.a \
 		%/libapi-ms-win-gaming-tcui-l1-1-0.a \
+		%/libapi-ms-win-gaming-tcui-l1-1-1.a \
 		%/libapi-ms-win-gaming-tcui-l1-1-2.a \
 		%/libapi-ms-win-gaming-tcui-l1-1-3.a \
 		%/libapi-ms-win-gaming-tcui-l1-1-4.a \
+		%/libapi-ms-win-mm-time-l1-1-0.a \
+		%/libapi-ms-win-ntuser-sysparams-l1-1-0.a \
+		%/libapi-ms-win-power-base-l1-1-0.a \
+		%/libapi-ms-win-power-setting-l1-1-0.a \
 		%/libapi-ms-win-ro-typeresolution-l1-1-0.a \
 		%/libapi-ms-win-ro-typeresolution-l1-1-1.a \
+		%/libapi-ms-win-security-appcontainer-l1-1-0.a \
+		%/libapi-ms-win-security-base-ansi-l1-1-0.a \
 		%/libapi-ms-win-security-base-l1-1-0.a \
 		%/libapi-ms-win-security-base-l1-2-0.a \
 		%/libapi-ms-win-security-base-l1-2-1.a \
+		%/libapi-ms-win-security-base-l1-2-2.a \
+		%/libapi-ms-win-security-cpwl-l1-1-0.a \
 		%/libapi-ms-win-security-cryptoapi-l1-1-0.a \
 		%/libapi-ms-win-security-isolatedcontainer-l1-1-0.a \
 		%/libapi-ms-win-security-lsalookup-ansi-l2-1-0.a \
 		%/libapi-ms-win-security-lsalookup-l2-1-0.a \
+		%/libapi-ms-win-security-lsapolicy-l1-1-0.a \
 		%/libapi-ms-win-security-provider-ansi-l1-1-0.a \
 		%/libapi-ms-win-security-provider-l1-1-0.a \
 		%/libapi-ms-win-security-sddl-ansi-l1-1-0.a \
 		%/libapi-ms-win-security-sddl-l1-1-0.a \
 		%/libapi-ms-win-security-systemfunctions-l1-1-0.a \
+		%/libapi-ms-win-service-core-l1-1-0.a \
+		%/libapi-ms-win-service-management-l1-1-0.a \
+		%/libapi-ms-win-service-winsvc-l1-1-0.a \
 		%/libapi-ms-win-shcore-obsolete-l1-1-0.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a
 	rm -f $@
