--- a/mingw-w64-headers/Makefile.in
+++ b/mingw-w64-headers/Makefile.in
@@ -408,6 +408,7 @@ EXTRA_HEADERS = \
 @HAVE_WIDL_TRUE@  include/d3d12.idl \
 @HAVE_WIDL_TRUE@  include/d3d12sdklayers.idl \
 @HAVE_WIDL_TRUE@  include/d3d12shader.idl \
+@HAVE_WIDL_TRUE@  include/d3d12video.idl \
 @HAVE_WIDL_TRUE@  include/d3dcommon.idl \
 @HAVE_WIDL_TRUE@  include/dbgprop.idl \
 @HAVE_WIDL_TRUE@  include/dcommon.idl \
