crt: Add dsparse to mincore
Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2195,6 +2195,7 @@ endif
 		%/libcryptbase.a \
 		%/libcryptnet.a \
 		%/libdnsapi.a \
+		%/libdsparse.a \
 		%/libiphlpapi.a \
 		%/libmpr.a \
 		%/libmswsock.a \
