crt: Add libmincore_downlevel.a
This exactly matches mincore_downlevel.lib in WinSDK 10.0.19041.0.

Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2212,6 +2212,20 @@ endif
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
 
+%/libmincore_downlevel.a: lib-common/mincore_downlevel.mri \
+		%/libapi-ms-win-downlevel-advapi32-l1-1-0.a \
+		%/libapi-ms-win-downlevel-advapi32-l2-1-0.a \
+		%/libapi-ms-win-downlevel-normaliz-l1-1-0.a \
+		%/libapi-ms-win-downlevel-ole32-l1-1-0.a \
+		%/libapi-ms-win-downlevel-shell32-l1-1-0.a \
+		%/libapi-ms-win-downlevel-shlwapi-l1-1-0.a \
+		%/libapi-ms-win-downlevel-shlwapi-l2-1-0.a \
+		%/libapi-ms-win-downlevel-user32-l1-1-0.a \
+		%/libapi-ms-win-downlevel-version-l1-1-0.a
+	rm -f $@
+	cd $(dir $@) && $(AR) -M < $(abspath $<)
+	$(RANLIB) $@
+
 %/libpathcch.a: lib-common/pathcch.mri \
 		%/libapi-ms-win-core-path-l1-1-0.a
 	rm -f $@
