--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -168,6 +168,7 @@ libarm64_DATA += %reldir%/libmgmtapi.a
 libarm64_DATA += %reldir%/libmi.a
 libarm64_DATA += %reldir%/libmidimap.a
 libarm64_DATA += %reldir%/libmincore.a
+libarm64_DATA += %reldir%/libmincore_downlevel.a
 libarm64_DATA += %reldir%/libmlang.a
 libarm64_DATA += %reldir%/libmmdevapi.a
 libarm64_DATA += %reldir%/libmodemui.a
