--- a/mingw-w64-crt/libarm32/Makefile.am
+++ b/mingw-w64-crt/libarm32/Makefile.am
@@ -388,6 +388,7 @@ libarm32_DATA += %reldir%/libmfsensorgroup.a
 libarm32_DATA += %reldir%/libmfsrcsnk.a
 libarm32_DATA += %reldir%/libmftranscode.a
 libarm32_DATA += %reldir%/libmincore.a
+libarm32_DATA += %reldir%/libmincore_downlevel.a
 libarm32_DATA += %reldir%/libmgmtapi.a
 libarm32_DATA += %reldir%/libmibincodec.a
 libarm32_DATA += %reldir%/libmicrosoft.management.infrastructure.native.unmanaged.a
