crt: Add onecore_apiset
I've left in FIXMEs for the new API sets for now, which will follow
properly in later patches.

Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/libarm32/Makefile.am
+++ b/mingw-w64-crt/libarm32/Makefile.am
@@ -538,6 +538,7 @@ libarm32_DATA += %reldir%/liboleacc.a
 libarm32_DATA += %reldir%/liboleaut32.a
 libarm32_DATA += %reldir%/liboledlg.a
 libarm32_DATA += %reldir%/libondemandconnroutehelper.a
+libarm32_DATA += %reldir%/libonecore_apiset.a
 libarm32_DATA += %reldir%/libonex.a
 libarm32_DATA += %reldir%/libonexui.a
 libarm32_DATA += %reldir%/liboobefldr.a
