--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -220,6 +220,7 @@ libarm64_DATA += %reldir%/libole32.a
 libarm64_DATA += %reldir%/liboleacc.a
 libarm64_DATA += %reldir%/liboleaut32.a
 libarm64_DATA += %reldir%/liboledlg.a
+libarm64_DATA += %reldir%/libonecore_apiset.a
 libarm64_DATA += %reldir%/libopengl32.a
 libarm64_DATA += %reldir%/libosuninst.a
 libarm64_DATA += %reldir%/libp2p.a
