crt: Add api-ms-win-core-backgroundtask-l1-1-0 to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2379,6 +2379,7 @@ endif
 %/libonecore_apiset.a: lib-common/onecore_apiset.mri \
 		%/libapi-ms-win-core-apiquery-l2-1-0.a \
 		%/libapi-ms-win-core-atoms-l1-1-0.a \
+		%/libapi-ms-win-core-backgroundtask-l1-1-0.a \
 		%/libapi-ms-win-core-com-l1-1-0.a \
 		%/libapi-ms-win-core-com-l1-1-1.a \
 		%/libapi-ms-win-core-com-l1-1-2.a \
