crt: Add api-ms-win-core-debug-minidump to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2401,6 +2401,7 @@ endif
 		%/libapi-ms-win-core-debug-l1-1-0.a \
 		%/libapi-ms-win-core-debug-l1-1-1.a \
 		%/libapi-ms-win-core-debug-l1-1-2.a \
+		%/libapi-ms-win-core-debug-minidump-l1-1-0.a \
 		%/libapi-ms-win-core-delayload-l1-1-0.a \
 		%/libapi-ms-win-core-delayload-l1-1-1.a \
 		%/libapi-ms-win-core-enclave-l1-1-0.a \
