--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2405,6 +2405,7 @@ endif
 		%/libapi-ms-win-core-delayload-l1-1-0.a \
 		%/libapi-ms-win-core-delayload-l1-1-1.a \
 		%/libapi-ms-win-core-enclave-l1-1-0.a \
+		%/libapi-ms-win-core-enclave-l1-1-1.a \
 		%/libapi-ms-win-core-errorhandling-l1-1-0.a \
 		%/libapi-ms-win-core-errorhandling-l1-1-1.a \
 		%/libapi-ms-win-core-errorhandling-l1-1-2.a \
