--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2443,6 +2443,7 @@ endif
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-0.a \
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-1.a \
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-2.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-3.a \
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-5.a \
 		%/libapi-ms-win-core-largeinteger-l1-1-0.a \
 		%/libapi-ms-win-core-libraryloader-l1-2-0.a \
