--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2446,6 +2446,7 @@ endif
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-3.a \
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-4.a \
 		%/libapi-ms-win-core-kernel32-legacy-l1-1-5.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-6.a \
 		%/libapi-ms-win-core-largeinteger-l1-1-0.a \
 		%/libapi-ms-win-core-libraryloader-l1-2-0.a \
 		%/libapi-ms-win-core-libraryloader-l1-2-1.a \
