crt: Add api-ms-win-core-perfcounters-l1-1-0 to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2477,6 +2477,7 @@ endif
 		%/libapi-ms-win-core-namespace-l1-1-0.a \
 		%/libapi-ms-win-core-normalization-l1-1-0.a \
 		%/libapi-ms-win-core-path-l1-1-0.a \
+		%/libapi-ms-win-core-perfcounters-l1-1-0.a \
 		%/libapi-ms-win-core-privateprofile-l1-1-0.a \
 		%/libapi-ms-win-core-privateprofile-l1-1-1.a \
 		%/libapi-ms-win-core-processenvironment-ansi-l1-1-0.a \
