--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2273,6 +2273,7 @@ endif
 		%/libapi-ms-win-core-shutdown-l1-1-0.a \
 		%/libapi-ms-win-core-shutdown-l1-1-1.a \
 		%/libapi-ms-win-core-sidebyside-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-sidebyside-l1-1-0.a \
 		%/libapi-ms-win-core-string-l1-1-0.a \
 		%/libapi-ms-win-core-string-l2-1-0.a \
 		%/libapi-ms-win-core-string-l2-1-1.a \
