--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2538,6 +2538,7 @@ endif
 		%/libapi-ms-win-core-timezone-l1-1-0.a \
 		%/libapi-ms-win-core-timezone-l1-1-1.a \
 		%/libapi-ms-win-core-toolhelp-l1-1-0.a \
+		%/libapi-ms-win-core-toolhelp-l1-1-1.a \
 		%/libapi-ms-win-core-url-l1-1-0.a \
 		%/libapi-ms-win-core-util-l1-1-0.a \
 		%/libapi-ms-win-core-util-l1-1-1.a \
