crt: Add api-ms-win-eventing-tdh-l1-1-1 to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2579,6 +2579,7 @@ endif
 		%/libapi-ms-win-eventing-obsolete-l1-1-0.a \
 		%/libapi-ms-win-eventing-provider-l1-1-0.a \
 		%/libapi-ms-win-eventing-tdh-l1-1-0.a \
+		%/libapi-ms-win-eventing-tdh-l1-1-1.a \
 		%/libapi-ms-win-gaming-deviceinformation-l1-1-0.a \
 		%/libapi-ms-win-mm-time-l1-1-0.a \
 		%/libapi-ms-win-power-base-l1-1-0.a \
