--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2583,6 +2583,7 @@ endif
 		%/libapi-ms-win-gaming-deviceinformation-l1-1-0.a \
 		%/libapi-ms-win-mm-time-l1-1-0.a \
 		%/libapi-ms-win-oobe-notification-l1-1-0.a \
+		%/libapi-ms-win-perf-legacy-l1-1-0.a \
 		%/libapi-ms-win-power-base-l1-1-0.a \
 		%/libapi-ms-win-power-setting-l1-1-0.a \
 		%/libapi-ms-win-power-setting-l1-1-1.a \
