crt: Add api-ms-win-power-limitsmanagement-l1-1-0 to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2585,6 +2585,7 @@ endif
 		%/libapi-ms-win-oobe-notification-l1-1-0.a \
 		%/libapi-ms-win-perf-legacy-l1-1-0.a \
 		%/libapi-ms-win-power-base-l1-1-0.a \
+		%/libapi-ms-win-power-limitsmanagement-l1-1-0.a \
 		%/libapi-ms-win-power-setting-l1-1-0.a \
 		%/libapi-ms-win-power-setting-l1-1-1.a \
 		%/libapi-ms-win-ro-typeresolution-l1-1-0.a \
