--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2600,6 +2600,7 @@ endif
 		%/libapi-ms-win-security-credentials-l1-1-0.a \
 		%/libapi-ms-win-security-cryptoapi-l1-1-0.a \
 		%/libapi-ms-win-security-isolatedcontainer-l1-1-0.a \
+		%/libapi-ms-win-security-isolatedcontainer-l1-1-1.a \
 		%/libapi-ms-win-security-lsalookup-ansi-l2-1-0.a \
 		%/libapi-ms-win-security-lsalookup-l2-1-0.a \
 		%/libapi-ms-win-security-lsalookup-l2-1-1.a \
