--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2621,6 +2621,7 @@ endif
 		%/libapi-ms-win-service-management-l2-1-0.a \
 		%/libapi-ms-win-service-winsvc-l1-1-0.a \
 		%/libapi-ms-win-shcore-obsolete-l1-1-0.a \
+		%/libapi-ms-win-shcore-path-l1-1-0.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libauthz.a \
 		%/libbcrypt.a \
