crt: Add api-ms-win-shcore-scaling-l1-1-0 to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2624,6 +2624,7 @@ endif
 		%/libapi-ms-win-shcore-path-l1-1-0.a \
 		%/libapi-ms-win-shcore-registry-l1-1-0.a \
 		%/libapi-ms-win-shcore-registry-l1-1-1.a \
+		%/libapi-ms-win-shcore-scaling-l1-1-0.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libauthz.a \
 		%/libbcrypt.a \
