--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2626,6 +2626,7 @@ endif
 		%/libapi-ms-win-shcore-registry-l1-1-1.a \
 		%/libapi-ms-win-shcore-scaling-l1-1-0.a \
 		%/libapi-ms-win-shcore-scaling-l1-1-1.a \
+		%/libapi-ms-win-shcore-scaling-l1-1-2.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libauthz.a \
 		%/libbcrypt.a \
