crt: Add api-ms-win-shcore-unicodeansi-l1-1-0 to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2630,6 +2630,7 @@ endif
 		%/libapi-ms-win-shcore-stream-l1-1-0.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libapi-ms-win-shcore-sysinfo-l1-1-0.a \
+		%/libapi-ms-win-shcore-unicodeansi-l1-1-0.a \
 		%/libauthz.a \
 		%/libbcrypt.a \
 		%/libcabinet.a \
