--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2631,6 +2631,7 @@ endif
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libapi-ms-win-shcore-sysinfo-l1-1-0.a \
 		%/libapi-ms-win-shcore-unicodeansi-l1-1-0.a \
+		%/libapi-ms-win-shell-shdirectory-l1-1-0.a \
 		%/libauthz.a \
 		%/libbcrypt.a \
 		%/libcabinet.a \
