--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2892,6 +2892,312 @@ endif
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
 
+%/libwindowscoreheadless_apiset.a: lib-common/windowscoreheadless_apiset.mri \
+		%/libapi-ms-win-appmodel-runtime-l1-1-0.a \
+		%/libapi-ms-win-appmodel-runtime-l1-1-1.a \
+		%/libapi-ms-win-appmodel-runtime-l1-1-2.a \
+		%/libapi-ms-win-appmodel-runtime-l1-1-3.a \
+		%/libapi-ms-win-core-apiquery-l2-1-0.a \
+		%/libapi-ms-win-core-atoms-l1-1-0.a \
+		%/libapi-ms-win-core-backgroundtask-l1-1-0.a \
+		%/libapi-ms-win-core-calendar-l1-1-0.a \
+		%/libapi-ms-win-core-com-l1-1-0.a \
+		%/libapi-ms-win-core-com-l1-1-1.a \
+		%/libapi-ms-win-core-com-l1-1-2.a \
+		%/libapi-ms-win-core-com-l1-1-3.a \
+		%/libapi-ms-win-core-com-midlproxystub-l1-1-0.a \
+		%/libapi-ms-win-core-comm-l1-1-0.a \
+		%/libapi-ms-win-core-comm-l1-1-1.a \
+		%/libapi-ms-win-core-comm-l1-1-2.a \
+		%/libapi-ms-win-core-console-l1-1-0.a \
+		%/libapi-ms-win-core-console-l1-2-0.a \
+		%/libapi-ms-win-core-console-l1-2-1.a \
+		%/libapi-ms-win-core-console-l2-1-0.a \
+		%/libapi-ms-win-core-console-l2-2-0.a \
+		%/libapi-ms-win-core-console-l3-2-0.a \
+		%/libapi-ms-win-core-datetime-l1-1-0.a \
+		%/libapi-ms-win-core-datetime-l1-1-1.a \
+		%/libapi-ms-win-core-datetime-l1-1-2.a \
+		%/libapi-ms-win-core-debug-l1-1-0.a \
+		%/libapi-ms-win-core-debug-l1-1-1.a \
+		%/libapi-ms-win-core-debug-l1-1-2.a \
+		%/libapi-ms-win-core-debug-minidump-l1-1-0.a \
+		%/libapi-ms-win-core-delayload-l1-1-0.a \
+		%/libapi-ms-win-core-delayload-l1-1-1.a \
+		%/libapi-ms-win-core-enclave-l1-1-0.a \
+		%/libapi-ms-win-core-enclave-l1-1-1.a \
+		%/libapi-ms-win-core-errorhandling-l1-1-0.a \
+		%/libapi-ms-win-core-errorhandling-l1-1-1.a \
+		%/libapi-ms-win-core-errorhandling-l1-1-2.a \
+		%/libapi-ms-win-core-errorhandling-l1-1-3.a \
+		%/libapi-ms-win-core-featurestaging-l1-1-0.a \
+		%/libapi-ms-win-core-featurestaging-l1-1-1.a \
+		%/libapi-ms-win-core-fibers-l1-1-0.a \
+		%/libapi-ms-win-core-fibers-l1-1-1.a \
+		%/libapi-ms-win-core-fibers-l2-1-0.a \
+		%/libapi-ms-win-core-fibers-l2-1-1.a \
+		%/libapi-ms-win-core-file-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-file-ansi-l2-1-0.a \
+		%/libapi-ms-win-core-file-fromapp-l1-1-0.a \
+		%/libapi-ms-win-core-file-l1-1-0.a \
+		%/libapi-ms-win-core-file-l1-2-0.a \
+		%/libapi-ms-win-core-file-l1-2-1.a \
+		%/libapi-ms-win-core-file-l1-2-2.a \
+		%/libapi-ms-win-core-file-l1-2-3.a \
+		%/libapi-ms-win-core-file-l2-1-0.a \
+		%/libapi-ms-win-core-file-l2-1-1.a \
+		%/libapi-ms-win-core-file-l2-1-2.a \
+		%/libapi-ms-win-core-file-l2-1-3.a \
+		%/libapi-ms-win-core-firmware-l1-1-0.a \
+		%/libapi-ms-win-core-handle-l1-1-0.a \
+		%/libapi-ms-win-core-heap-l1-1-0.a \
+		%/libapi-ms-win-core-heap-l2-1-0.a \
+		%/libapi-ms-win-core-heap-obsolete-l1-1-0.a \
+		%/libapi-ms-win-core-interlocked-l1-1-0.a \
+		%/libapi-ms-win-core-interlocked-l1-2-0.a \
+		%/libapi-ms-win-core-io-l1-1-0.a \
+		%/libapi-ms-win-core-io-l1-1-1.a \
+		%/libapi-ms-win-core-job-l1-1-0.a \
+		%/libapi-ms-win-core-job-l2-1-0.a \
+		%/libapi-ms-win-core-job-l2-1-1.a \
+		%/libapi-ms-win-core-kernel32-legacy-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-0.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-1.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-2.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-3.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-4.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-5.a \
+		%/libapi-ms-win-core-kernel32-legacy-l1-1-6.a \
+		%/libapi-ms-win-core-largeinteger-l1-1-0.a \
+		%/libapi-ms-win-core-libraryloader-l1-2-0.a \
+		%/libapi-ms-win-core-libraryloader-l1-2-1.a \
+		%/libapi-ms-win-core-libraryloader-l1-2-2.a \
+		%/libapi-ms-win-core-libraryloader-l2-1-0.a \
+		%/libapi-ms-win-core-localization-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-localization-l1-2-0.a \
+		%/libapi-ms-win-core-localization-l1-2-1.a \
+		%/libapi-ms-win-core-localization-l1-2-2.a \
+		%/libapi-ms-win-core-localization-l1-2-3.a \
+		%/libapi-ms-win-core-localization-l1-2-4.a \
+		%/libapi-ms-win-core-localization-l2-1-0.a \
+		%/libapi-ms-win-core-localization-obsolete-l1-2-0.a \
+		%/libapi-ms-win-core-memory-l1-1-0.a \
+		%/libapi-ms-win-core-memory-l1-1-1.a \
+		%/libapi-ms-win-core-memory-l1-1-2.a \
+		%/libapi-ms-win-core-memory-l1-1-3.a \
+		%/libapi-ms-win-core-memory-l1-1-4.a \
+		%/libapi-ms-win-core-memory-l1-1-5.a \
+		%/libapi-ms-win-core-memory-l1-1-6.a \
+		%/libapi-ms-win-core-memory-l1-1-7.a \
+		%/libapi-ms-win-core-namedpipe-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-namedpipe-ansi-l1-1-1.a \
+		%/libapi-ms-win-core-namedpipe-l1-1-0.a \
+		%/libapi-ms-win-core-namedpipe-l1-2-1.a \
+		%/libapi-ms-win-core-namedpipe-l1-2-2.a \
+		%/libapi-ms-win-core-namespace-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-namespace-l1-1-0.a \
+		%/libapi-ms-win-core-normalization-l1-1-0.a \
+		%/libapi-ms-win-core-path-l1-1-0.a \
+		%/libapi-ms-win-core-perfcounters-l1-1-0.a \
+		%/libapi-ms-win-core-privateprofile-l1-1-0.a \
+		%/libapi-ms-win-core-privateprofile-l1-1-1.a \
+		%/libapi-ms-win-core-processenvironment-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-processenvironment-l1-1-0.a \
+		%/libapi-ms-win-core-processenvironment-l1-2-0.a \
+		%/libapi-ms-win-core-processsnapshot-l1-1-0.a \
+		%/libapi-ms-win-core-processthreads-l1-1-0.a \
+		%/libapi-ms-win-core-processthreads-l1-1-1.a \
+		%/libapi-ms-win-core-processthreads-l1-1-2.a \
+		%/libapi-ms-win-core-processthreads-l1-1-3.a \
+		%/libapi-ms-win-core-processthreads-l1-1-4.a \
+		%/libapi-ms-win-core-processtopology-l1-1-0.a \
+		%/libapi-ms-win-core-processtopology-obsolete-l1-1-0.a \
+		%/libapi-ms-win-core-processtopology-obsolete-l1-1-1.a \
+		%/libapi-ms-win-core-profile-l1-1-0.a \
+		%/libapi-ms-win-core-psapi-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-psapi-l1-1-0.a \
+		%/libapi-ms-win-core-psm-appnotify-l1-1-0.a \
+		%/libapi-ms-win-core-quirks-l1-1-0.a \
+		%/libapi-ms-win-core-quirks-l1-1-1.a \
+		%/libapi-ms-win-core-realtime-l1-1-0.a \
+		%/libapi-ms-win-core-realtime-l1-1-1.a \
+		%/libapi-ms-win-core-realtime-l1-1-2.a \
+		%/libapi-ms-win-core-registry-l1-1-0.a \
+		%/libapi-ms-win-core-registry-l1-1-1.a \
+		%/libapi-ms-win-core-registry-l1-1-2.a \
+		%/libapi-ms-win-core-registry-l2-1-0.a \
+		%/libapi-ms-win-core-rtlsupport-l1-1-0.a \
+		%/libapi-ms-win-core-rtlsupport-l1-2-0.a \
+		%/libapi-ms-win-core-rtlsupport-l1-2-1.a \
+		%/libapi-ms-win-core-shutdown-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-shutdown-l1-1-0.a \
+		%/libapi-ms-win-core-shutdown-l1-1-1.a \
+		%/libapi-ms-win-core-sidebyside-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-sidebyside-l1-1-0.a \
+		%/libapi-ms-win-core-slapi-l1-1-0.a \
+		%/libapi-ms-win-core-state-helpers-l1-1-0.a \
+		%/libapi-ms-win-core-string-l1-1-0.a \
+		%/libapi-ms-win-core-string-l2-1-0.a \
+		%/libapi-ms-win-core-string-l2-1-1.a \
+		%/libapi-ms-win-core-string-obsolete-l1-1-0.a \
+		%/libapi-ms-win-core-string-obsolete-l1-1-1.a \
+		%/libapi-ms-win-core-stringansi-l1-1-0.a \
+		%/libapi-ms-win-core-synch-ansi-l1-1-0.a \
+		%/libapi-ms-win-core-synch-l1-1-0.a \
+		%/libapi-ms-win-core-synch-l1-2-0.a \
+		%/libapi-ms-win-core-synch-l1-2-1.a \
+		%/libapi-ms-win-core-sysinfo-l1-1-0.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-0.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-1.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-2.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-3.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-4.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-5.a \
+		%/libapi-ms-win-core-sysinfo-l1-2-6.a \
+		%/libapi-ms-win-core-systemtopology-l1-1-0.a \
+		%/libapi-ms-win-core-systemtopology-l1-1-1.a \
+		%/libapi-ms-win-core-threadpool-l1-2-0.a \
+		%/libapi-ms-win-core-threadpool-legacy-l1-1-0.a \
+		%/libapi-ms-win-core-timezone-l1-1-0.a \
+		%/libapi-ms-win-core-timezone-l1-1-1.a \
+		%/libapi-ms-win-core-toolhelp-l1-1-0.a \
+		%/libapi-ms-win-core-toolhelp-l1-1-1.a \
+		%/libapi-ms-win-core-url-l1-1-0.a \
+		%/libapi-ms-win-core-util-l1-1-0.a \
+		%/libapi-ms-win-core-util-l1-1-1.a \
+		%/libapi-ms-win-core-version-l1-1-0.a \
+		%/libapi-ms-win-core-version-l1-1-1.a \
+		%/libapi-ms-win-core-versionansi-l1-1-0.a \
+		%/libapi-ms-win-core-versionansi-l1-1-1.a \
+		%/libapi-ms-win-core-windowsceip-l1-1-0.a \
+		%/libapi-ms-win-core-windowserrorreporting-l1-1-0.a \
+		%/libapi-ms-win-core-windowserrorreporting-l1-1-1.a \
+		%/libapi-ms-win-core-windowserrorreporting-l1-1-2.a \
+		%/libapi-ms-win-core-windowserrorreporting-l1-1-3.a \
+		%/libapi-ms-win-core-winrt-error-l1-1-0.a \
+		%/libapi-ms-win-core-winrt-error-l1-1-1.a \
+		%/libapi-ms-win-core-winrt-l1-1-0.a \
+		%/libapi-ms-win-core-winrt-registration-l1-1-0.a \
+		%/libapi-ms-win-core-winrt-robuffer-l1-1-0.a \
+		%/libapi-ms-win-core-winrt-roparameterizediid-l1-1-0.a \
+		%/libapi-ms-win-core-winrt-string-l1-1-0.a \
+		%/libapi-ms-win-core-winrt-string-l1-1-1.a \
+		%/libapi-ms-win-core-wow64-l1-1-0.a \
+		%/libapi-ms-win-core-wow64-l1-1-1.a \
+		%/libapi-ms-win-core-wow64-l1-1-2.a \
+		%/libapi-ms-win-core-wow64-l1-1-3.a \
+		%/libapi-ms-win-core-xstate-l2-1-0.a \
+		%/libapi-ms-win-core-xstate-l2-1-1.a \
+		%/libapi-ms-win-devices-config-l1-1-1.a \
+		%/libapi-ms-win-devices-config-l1-1-2.a \
+		%/libapi-ms-win-devices-query-l1-1-0.a \
+		%/libapi-ms-win-devices-query-l1-1-1.a \
+		%/libapi-ms-win-devices-swdevice-l1-1-0.a \
+		%/libapi-ms-win-devices-swdevice-l1-1-1.a \
+		%/libapi-ms-win-eventing-classicprovider-l1-1-0.a \
+		%/libapi-ms-win-eventing-consumer-l1-1-0.a \
+		%/libapi-ms-win-eventing-consumer-l1-1-1.a \
+		%/libapi-ms-win-eventing-controller-l1-1-0.a \
+		%/libapi-ms-win-eventing-legacy-l1-1-0.a \
+		%/libapi-ms-win-eventing-obsolete-l1-1-0.a \
+		%/libapi-ms-win-eventing-provider-l1-1-0.a \
+		%/libapi-ms-win-eventing-tdh-l1-1-0.a \
+		%/libapi-ms-win-eventing-tdh-l1-1-1.a \
+		%/libapi-ms-win-gaming-deviceinformation-l1-1-0.a \
+		%/libapi-ms-win-mm-time-l1-1-0.a \
+		%/libapi-ms-win-ntuser-sysparams-l1-1-0.a \
+		%/libapi-ms-win-oobe-notification-l1-1-0.a \
+		%/libapi-ms-win-perf-legacy-l1-1-0.a \
+		%/libapi-ms-win-power-base-l1-1-0.a \
+		%/libapi-ms-win-power-limitsmanagement-l1-1-0.a \
+		%/libapi-ms-win-power-setting-l1-1-0.a \
+		%/libapi-ms-win-power-setting-l1-1-1.a \
+		%/libapi-ms-win-ro-typeresolution-l1-1-0.a \
+		%/libapi-ms-win-ro-typeresolution-l1-1-1.a \
+		%/libapi-ms-win-security-appcontainer-l1-1-0.a \
+		%/libapi-ms-win-security-base-ansi-l1-1-0.a \
+		%/libapi-ms-win-security-base-l1-1-0.a \
+		%/libapi-ms-win-security-base-l1-2-0.a \
+		%/libapi-ms-win-security-base-l1-2-1.a \
+		%/libapi-ms-win-security-base-l1-2-2.a \
+		%/libapi-ms-win-security-cpwl-l1-1-0.a \
+		%/libapi-ms-win-security-credentials-l1-1-0.a \
+		%/libapi-ms-win-security-cryptoapi-l1-1-0.a \
+		%/libapi-ms-win-security-isolatedcontainer-l1-1-0.a \
+		%/libapi-ms-win-security-isolatedcontainer-l1-1-1.a \
+		%/libapi-ms-win-security-lsalookup-ansi-l2-1-0.a \
+		%/libapi-ms-win-security-lsalookup-l2-1-0.a \
+		%/libapi-ms-win-security-lsalookup-l2-1-1.a \
+		%/libapi-ms-win-security-lsapolicy-l1-1-0.a \
+		%/libapi-ms-win-security-provider-ansi-l1-1-0.a \
+		%/libapi-ms-win-security-provider-l1-1-0.a \
+		%/libapi-ms-win-security-sddl-ansi-l1-1-0.a \
+		%/libapi-ms-win-security-sddl-l1-1-0.a \
+		%/libapi-ms-win-security-systemfunctions-l1-1-0.a \
+		%/libapi-ms-win-service-core-ansi-l1-1-0.a \
+		%/libapi-ms-win-service-core-ansi-l1-1-1.a \
+		%/libapi-ms-win-service-core-l1-1-0.a \
+		%/libapi-ms-win-service-core-l1-1-1.a \
+		%/libapi-ms-win-service-core-l1-1-2.a \
+		%/libapi-ms-win-service-core-l1-1-3.a \
+		%/libapi-ms-win-service-core-l1-1-4.a \
+		%/libapi-ms-win-service-management-l1-1-0.a \
+		%/libapi-ms-win-service-management-l2-1-0.a \
+		%/libapi-ms-win-service-winsvc-l1-1-0.a \
+		%/libapi-ms-win-shcore-obsolete-l1-1-0.a \
+		%/libapi-ms-win-shcore-path-l1-1-0.a \
+		%/libapi-ms-win-shcore-registry-l1-1-0.a \
+		%/libapi-ms-win-shcore-registry-l1-1-1.a \
+		%/libapi-ms-win-shcore-scaling-l1-1-0.a \
+		%/libapi-ms-win-shcore-scaling-l1-1-1.a \
+		%/libapi-ms-win-shcore-scaling-l1-1-2.a \
+		%/libapi-ms-win-shcore-stream-l1-1-0.a \
+		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
+		%/libapi-ms-win-shcore-sysinfo-l1-1-0.a \
+		%/libapi-ms-win-shcore-unicodeansi-l1-1-0.a \
+		%/libapi-ms-win-shell-shdirectory-l1-1-0.a \
+		%/libauthz.a \
+		%/libbcrypt.a \
+		%/libcabinet.a \
+		%/libcrypt32.a \
+		%/libcryptbase.a \
+		%/libcryptnet.a \
+		%/libdfscli.a \
+		%/libdhcpcsvc.a \
+		%/libdnsapi.a \
+		%/libdsrole.a \
+		%/libdwrite.a \
+		%/libfltlib.a \
+		%/libhid.a \
+		%/libiphlpapi.a \
+		%/liblogoncli.a \
+		%/libmmdevapi.a \
+		%/libmpr.a \
+		%/libmscms.a \
+		%/libmswsock.a \
+		%/libncrypt.a \
+		%/libnetutils.a \
+		%/libpowrprof.a \
+		%/libpropsys.a \
+		%/librpcrt4.a \
+		%/libsamcli.a \
+		%/libschedcli.a \
+		%/libsrvcli.a \
+		%/libsspicli.a \
+		%/libuserenv.a \
+		%/libwebauthn.a \
+		%/libwebsocket.a \
+		%/libwindowscodecs.a \
+		%/libwinhttp.a \
+		%/libwkscli.a \
+		%/libwlanapi.a \
+		%/libwldap32.a \
+		%/libxaudio2_9.a \
+		%/libxmllite.a
+	rm -f $@
+	cd $(dir $@) && $(AR) -M < $(abspath $<)
+	$(RANLIB) $@
+
 %/libvfw32.a: lib-common/vfw32.mri \
 		%/libmsvfw32.a \
 		%/libavifil32.a \
