crt: Add onecore
Note that this isn't yet exhaustive. Notably the official versions of
onecore, onecoreuap, and windowscoreheadless all include cut-down
versions of user32 etc., which I'm going to handle with a later patch.

Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -227,6 +227,7 @@ lib32_DATA += %reldir%/libolepro32.a
 lib32_DATA += %reldir%/libolesvr32.a
 lib32_DATA += %reldir%/libolethk32.a
 lib32_DATA += %reldir%/libonecore_apiset.a
+lib32_DATA += %reldir%/libonecore.a
 lib32_DATA += %reldir%/libopends60.a
 lib32_DATA += %reldir%/libopengl32.a
 lib32_DATA += %reldir%/libp2p.a
