crt: Add icu to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3012,7 +3012,8 @@ endif
 		%/libapi-ms-win-service-management-l1-1-0_windowsapp.a \
 		%/libapi-ms-win-service-winsvc-l1-1-0_windowsapp.a \
 		%/libapi-ms-win-shcore-obsolete-l1-1-0.a \
-		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a
+		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
+		%/libicu.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
