--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -177,6 +177,7 @@ libarm64_DATA += %reldir%/libmodemui.a
 libarm64_DATA += %reldir%/libmpr.a
 libarm64_DATA += %reldir%/libmsacm32.a
 libarm64_DATA += %reldir%/libmsafd.a
+libarm64_DATA += %reldir%/libmsajapi.a
 libarm64_DATA += %reldir%/libmscat32.a
 libarm64_DATA += %reldir%/libmscms.a
 libarm64_DATA += %reldir%/libmsctf.a
