crt: Add msajapi to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3299,6 +3299,7 @@ endif
 		%/liblogoncli.a \
 		%/libmmdevapi.a \
 		%/libmpr.a \
+		%/libmsajapi.a \
 		%/libmscms.a \
 		%/libmswsock.a \
 		%/libncrypt.a \
