crt: Add webservices for all architectures
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -656,6 +656,7 @@ lib64_DATA += %reldir%/libwebauthn.a
 lib64_DATA += %reldir%/libwebcheck.a
 lib64_DATA += %reldir%/libwebclnt.a
 lib64_DATA += %reldir%/libwebhits.a
+lib64_DATA += %reldir%/libwebservices.a
 lib64_DATA += %reldir%/libwebsocket.a
 lib64_DATA += %reldir%/libwiadss.a
 lib64_DATA += %reldir%/libwiarpc.a
