--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -330,6 +330,7 @@ libarm64_DATA += %reldir%/libw32topl.a
 libarm64_DATA += %reldir%/libwdigest.a
 libarm64_DATA += %reldir%/libwebauthn.a
 libarm64_DATA += %reldir%/libwebclnt.a
+libarm64_DATA += %reldir%/libwebservices.a
 libarm64_DATA += %reldir%/libwebsocket.a
 libarm64_DATA += %reldir%/libwecapi.a
 libarm64_DATA += %reldir%/libwer.a
