crt: Add webservices to nanosrv
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2396,6 +2396,7 @@ endif
 		%/libtbs.a \
 		%/libvirtdisk.a \
 		%/libvssapi.a \
+		%/libwebservices.a \
 		%/libwer.a \
 		%/libwevtapi.a \
 		%/libwintrust.a
