crt: Add webservices to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3314,6 +3314,7 @@ endif
 		%/libsspicli.a \
 		%/libuserenv.a \
 		%/libwebauthn.a \
+		%/libwebservices.a \
 		%/libwebsocket.a \
 		%/libwindowscodecs.a \
 		%/libwinhttp.a \
