crt: Add chakrart
Note that the DLL name is chakra.dll, but unusually the library name is
chakrart.

Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -49,6 +49,7 @@ lib64_DATA += %reldir%/libcdm.a
 lib64_DATA += %reldir%/libcertcli.a
 lib64_DATA += %reldir%/libcfgbkend.a
 lib64_DATA += %reldir%/libcfgmgr32.a
+lib64_DATA += %reldir%/libchakrart.a
 lib64_DATA += %reldir%/libchtskdic.a
 lib64_DATA += %reldir%/libcimwin32.a
 lib64_DATA += %reldir%/libCINTIME.a
