crt: Add chakrart to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3286,6 +3286,7 @@ endif
 		%/libauthz.a \
 		%/libbcrypt.a \
 		%/libcabinet.a \
+		%/libchakrart.a \
 		%/libcrypt32.a \
 		%/libcryptbase.a \
 		%/libcryptnet.a \
