crt: Provide dhcpcsvc6 for arm64 too
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -70,6 +70,7 @@ libarm64_DATA += %reldir%/libdevmgr.a
 libarm64_DATA += %reldir%/libdevobj.a
 libarm64_DATA += %reldir%/libdevrtl.a
 libarm64_DATA += %reldir%/libdfscli.a
+libarm64_DATA += %reldir%/libdhcpcsvc6.a
 libarm64_DATA += %reldir%/libdhcpcsvc.a
 libarm64_DATA += %reldir%/libdhcpsapi.a
 libarm64_DATA += %reldir%/libdiagnosticdataquery.a
