crt: Add directml
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -117,6 +117,7 @@ lib64_DATA += %reldir%/libdimsntfy.a
 lib64_DATA += %reldir%/libdimsroam.a
 #lib64_DATA += %reldir%/libdinput.a   # Handled by custom rule
 #lib64_DATA += %reldir%/libdinput8.a  # Handled by custom rule
+lib64_DATA += %reldir%/libdirectml.a
 lib64_DATA += %reldir%/libdiskcopy.a
 lib64_DATA += %reldir%/libdismapi.a
 lib64_DATA += %reldir%/libdmconfig.a
