--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -109,6 +109,7 @@ lib32_DATA += %reldir%/libdhcpsapi.a
 lib32_DATA += %reldir%/libdiagnosticdataquery.a
 #lib32_DATA += %reldir%/libdinput.a   # Handled by custom rule
 #lib32_DATA += %reldir%/libdinput8.a  # Handled by custom rule
+lib32_DATA += %reldir%/libdirectml.a
 lib32_DATA += %reldir%/libdismapi.a
 lib32_DATA += %reldir%/libdlcapi.a
 lib32_DATA += %reldir%/libdnsapi.a
