crt: Add dnsperf
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -125,6 +125,7 @@ lib64_DATA += %reldir%/libdmivcitf.a
 lib64_DATA += %reldir%/libdmutil.a
 lib64_DATA += %reldir%/libdmvdsitf.a
 lib64_DATA += %reldir%/libdnsapi.a
+lib64_DATA += %reldir%/libdnsperf.a
 lib64_DATA += %reldir%/libdnsrslvr.a
 lib64_DATA += %reldir%/libdpapi.a
 lib64_DATA += %reldir%/libdpnaddr.a
