crt: Add dnsperf to nanosrv
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2383,6 +2383,7 @@ endif
 		%/libcryptxml.a \
 		%/libdbgeng.a \
 		%/libdbghelp.a \
+		%/libdnsperf.a \
 		%/libesent.a \
 		%/libfaultrep.a \
 		%/libfwpuclnt.a \
