crt: Add dxcore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -146,6 +146,7 @@ lib64_DATA += %reldir%/libdssec.a
 lib64_DATA += %reldir%/libdssenh.a
 lib64_DATA += %reldir%/libdsuiext.a
 lib64_DATA += %reldir%/libduser.a
+lib64_DATA += %reldir%/libdxcore.a
 lib64_DATA += %reldir%/libefsadu.a
 lib64_DATA += %reldir%/libes.a
 lib64_DATA += %reldir%/libesent.a
