--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -98,6 +98,7 @@ libarm64_DATA += %reldir%/libdsuiext.a
 libarm64_DATA += %reldir%/libduser.a
 libarm64_DATA += %reldir%/libdwmapi.a
 libarm64_DATA += %reldir%/libdwrite.a
+libarm64_DATA += %reldir%/libdxcore.a
 libarm64_DATA += %reldir%/libdxgi.a
 libarm64_DATA += %reldir%/libdxva2.a
 libarm64_DATA += %reldir%/libeappcfg.a
